# ONTs

./: AdaptiveHistogramEqualization.cpp  ApplyMask.cpp  CMakeLists.txt  CastImage.cpp  ConvertNIfTI3DImageSeriesTo4DImage.cpp  ConvertNIfTI3DSeriesTo3DVectorImage.cpp  ConvertNIfTI3DSeriesTo4DImage.cpp  ConvertNIfTI3DVectorImageTo4D.cpp  CopyHeaderInformation.cpp  GlobalPCADenoising.cpp  HistogramStandarization.cpp  MaskImage.cpp  TruncateNegatives.cpp  test.cpp
